grid spacing issue and delete of nested grid issue fixed

--- a/projects/studio/src/app/data-form/form-designer/form-designer.component.scss
+++ b/projects/studio/src/app/data-form/form-designer/form-designer.component.scss
@@ -10,3 +10,9 @@
         overflow-x: auto;
     }
 }
+
+.second-child {
+    position: -webkit-sticky; /* For Safari */
+    position: sticky;
+    top: 0; /* Adjust as needed */
+  }
